# clang-demos

./: CMakeLists.txt  README.md
db_tests/: csv_formatter.c  csv_formatter.h  db_test.c  db_test.h  dm_manager.c  dm_manager.h
ext_libs/: CMakeLists.txt
ext_libs/cJSON/: CMakeLists.txt
ext_libs/dpi/: CMakeLists.txt
ext_libs/dpi/include/: DPI.h  DPIext.h  DPItypes.h
libs/: README.md  conf.c  log.c  log.h  utils.c
libs/doc/: log_README.md  map_README.md  sandbird_README.md  uuid4_README.md  vec_README.md
linux_tests/: README.md  dir_test.c  dir_test.h  gtk_main.c  proc_test.c  proc_test.h  test_suite.c  test_suite.h  thread_test.c  thread_test.h  time_test.c  time_test.h  x11_main.c
sdl_tests/: .gitignore  README.md  worldrpg.rc  worldrpg.res
sdl_tests/tests/test10_clip/: Makefile  WRPG_sprite.c  WRPG_sprite.h  test_10_clip.c
sdl_tests/tests/test11_colormod/: Makefile  WRPG_sprite.c  WRPG_sprite.h  test_11_colormod.c
sdl_tests/tests/test12_alphablend/: Makefile  test_12_alphablend.c
sdl_tests/tests/test13_animate/: Makefile  WRPG_sprite.h  test_13_animate.c
sdl_tests/tests/test14_flip_rotate/: Makefile  WRPG_sprite.c  WRPG_sprite.h  test_14_flip_rotate.c
sdl_tests/tests/test15_truetype/: Makefile  WRPG_sprite.h  test_15_truetype.c
sdl_tests/tests/test16_mouseevent/: Makefile  WRPG_button.c  WRPG_button.h  test_16_mouseevent.c
sdl_tests/tests/test17_gamecontroller/: Makefile  WRPG_sprite.h  test_17_gamecontroller.c
sdl_tests/tests/test18_haptic/: Makefile  test_18_haptic.c
sdl_tests/tests/test19_mixer/: Makefile  test_19_mixer.c
sdl_tests/tests/test1_helloworld/: Makefile  test_1_helloworld.c
sdl_tests/tests/test20_timer/: Makefile  WRPG_sprite.c  test_20_timer.c
sdl_tests/tests/test21_ratelimit/: Makefile  test_21_ratelimit.c
sdl_tests/tests/test22_move/: Makefile  WRPG_actor.c  WRPG_actor.h  test_22_move.c
sdl_tests/tests/test23_collision/: Makefile  WRPG_actor.c  WRPG_actor.h  test_23_collision.c
sdl_tests/tests/test24_circlecollision/: Makefile  WRPG_actor.c  WRPG_actor.h  WRPG_sprite.c  test_24_circlecollision.c
sdl_tests/tests/test25_camera/: Makefile  WRPG_actor.c  WRPG_actor.h  test_25_camera.c
sdl_tests/tests/test26_particle/: Makefile  WRPG_particle.c  WRPG_particle.h  test_26_particle.c
sdl_tests/tests/test27_independentmove/: Makefile  WRPG_actor.c  WRPG_actor.h  WRPG_sprite.h  test_27_independentmove.c
sdl_tests/tests/test28_timercallback/: Makefile  test_28_timercallback.c
sdl_tests/tests/test29_statemachine/: Makefile  WRPG_entityManager.c  WRPG_entityManager.h  WRPG_main.c  WRPG_miner.c  WRPG_miner.h  WRPG_stateMachine.c
sdl_tests/tests/test2_quit_event/: Makefile  test_2_quitevent.c
sdl_tests/tests/test30_messagedispatcher/: Makefile  WRPG_ConsoleUtils.h  WRPG_MessageDispatcher.c  WRPG_MessageDispatcher.h  WRPG_MinerWife.c  WRPG_MinerWife.h  WRPG_consts.h  WRPG_entityManager.c  WRPG_entityManager.h  WRPG_main.c  WRPG_miner.c  WRPG_miner.h  WRPG_stateMachine.c  WRPG_stateMachine.h
sdl_tests/tests/test31_imgui/: CMakeLists.txt  test_main_opengl.c  test_main_sdlrender.c
sdl_tests/tests/test3_keyboard/: Makefile  test_3_keyborad.c
sdl_tests/tests/test4_stretch/: Makefile  test_4_stretch.c
sdl_tests/tests/test5_sdl_img/: Makefile  test_5_sdl_img.c
sdl_tests/tests/test6_texture/: Makefile  test_6_texture.c
sdl_tests/tests/test7_draw/: Makefile  test_7_draw.c
sdl_tests/tests/test8_viewport/: Makefile  test_8_viewport.c
sdl_tests/tests/test9_colorkey/: Makefile  WRPG_sprite.c  WRPG_sprite.h  test_9_colorkey.c
tools/: conf.h  main.c  utils.h
tools/doc/: INI_README.md  cjson_README.md
